Chapter 10 — Listing 10.11: ThreadLocalCorrelationId.java Demonstrates: ThreadLocal providing per-thread isolated state for